feture: compleated EmailService, created ApiGateway
