# EmailService/API/controllers/get_email_controller.go
@@ -19,6 +19,18 @@ func NewGetEmailController(handler *queries.GetEmailQueryHandler) *GetEmailContr
 	}
 }
 
+// Handle godoc
+// @Summary Get email by ID
+// @Description Retrieves an email based on its unique ID.
+// @Tags emails
+// @Accept json
+// @Produce json
+// @Param id path string true "Unique Email ID"
+// @Success 200 {object} contract.GetEmailResponse "Email details retrieved successfully"
+// @Failure 400 {object} contract.GetEmailResponse "Invalid request parameters"
+// @Failure 404 {object} contract.GetEmailResponse "Email not found"
+// @Failure 500 {object} contract.GetEmailResponse "Server error during email retrieval"
+// @Router /emails/{id} [get]
 func (h *GetEmailController) Handle(c *gin.Context) {
 	responseSender := services.NewResponseSender(c)
 	emailID := c.Param("id")
